--- a/THUBeamer-master/ppt01.tex
+++ b/THUBeamer-master/ppt01.tex
@@ -1,239 +1,183 @@
 \section{背景}
-  \frame
-  {
-    \frametitle{\secname~ }
-    \begin{block}{TCP在无线网络中的局限性}
-    	TCP最初是针对有线网络设计的，
-    	其拥塞控制模型基于丢包设计。
-    	由于无线网络误码率高，
-    	传统TCP无法很好应对无线网络中的数据传输。
-    \end{block}
-    \begin{block}{TCP/NC}
-    	Sundararajan等人提出TCP/NC\footfullcite{Sundararajan2009}，
-    	在OSI协议栈的TCP层和NC层添加一个网络编码层。
-		在网络编码层对数据包进行冗余编码，
-		掩盖链路中出现的丢包。
-    \end{block}
-    \note{
-    }
-  }
-
-  \subsection{TCP/NC原理}
-  \frame{
-  \frametitle{TCP/NC框图}
-      \begin{columns}[onlytextwidth]
-      	%%\vspace{5em}
-      	\hspace{-3.0em}
-      	\begin{column}{0.55\textwidth}
-      	  \begin{figure}
-      		\includegraphics[height=5cm]{../figures/tcpnc.eps}
-      		\caption{TCP/NC结构框图}
-      		\label{fig:tcpnc}
-      	\end{figure}
-      	\end{column}
-      \hspace{0.5em}
-      \begin{column}{0.55\textwidth}
-      	\footnotesize
-      	\begin{block}{NC层发送端}
-      		接收TCP层的数据包，
-      		根据编码窗口和冗余因子对数据包进行线性组合，然后发往IP层。
-      		接收端收到足够线性组合包后就可以将原始数据包解码出来。
-      	\end{block}
-      \begin{block}{NC层接收端}
-      	接收IP层传上来的编码包，
-      	满足可解条件后，
-      	将原始数据宝解码出来，
-      	往上传给TCP层。
-      \end{block}
-      \end{column}
-      \end{columns}
-
-%        \vspace{-1em}
-%      其他：Tribox、Swept-sphere、 Sphere-shell、Zonotopes、圆柱形、圆锥、椭球形等等。
-%      
-      \note{
-        上面这几个就是最常见的凸包围体。最常见的沿坐标轴方向的AABB包围盒，带方向的包围盒OBB，包围球，k面的凸包围体（k-DOP），和凸包，还有一些比较特定领域用的圆柱、圆锥形、椭球形等等。
-        其中k-DOP是采用k/2对固定方向的半空间相交构成的凸包围体，是综合比较较好的包围体，因为可以通过k来调节包围体的简单性和紧致性来满足不同应用的需求。
-      }
-  }
-\frame{
-	\frametitle{Seen Packet}
-	\vspace{-2em}
-	\begin{myDef}[See a packet]\label{def:seepkt}
-		如果一个节点根据现有的信息可以计算出如\textbf{\emph{$\left(p+q\right)$}}形式的线性组合，
-		那么我们就说这个节点“\textbf{see packet \emph{$p$}}”。
-		其中\textbf{$q$}本身就是只包含序号比$p$大的报文的线性组合。
-		解码出某个报文也算作是“\textbf{see a packet}”，此时\textbf{$q=0$}。
-	\end{myDef}
-	\vspace{+1em}
-	例如，接收端收到编码包$C\left[1\right]=p_1+p_2+p_3+p_4$，
-	由定义\ref{def:seepkt}可知，
-	接收端看到了报文$p_1$。
-	如果再次接收到$C\left[2\right]=p_1+2p_2+3p_3+p_4$，
-	由$C\left[2\right] - C\left[1\right] = p_2+p_3$，
-	由定义\ref{def:seepkt}可知，接收端看到了报文$p_2$。
-	接收端对于看到的每个报文，
-	都会回复给发送端一个ACK。
-	
+\subsection{无人机}
+%%无人机行业发展
+\frame {
+	\frametitle{无人机行业发展}
+	近几年国内无人机市场规模飞速发展，
+	兴起了一批如大疆科技、零度智控等科技企业。
+	\begin{figure}
+		\includegraphics[height=4cm]{figures/uavshichang.eps}
+		\caption{中国无人机市场规模}
+		\label{fig:uavshichang}
+	\end{figure}
 }
-   \frame{
-   \frametitle{编解码示例}
-     \footnotesize%%字体
-     \begin{columns}[onlytextwidth]
-     	\hspace{-2.0em}
-     	\begin{column}{0.55\textwidth}
-     		\begin{figure}
-     			\includegraphics[height=5cm]{../figures/codingack.eps}
-     			\caption{编码发送示例}
-     			\label{fig:codingexp}
-     		\end{figure}
-     	\end{column}
-     	\hspace{4.5em}
+%%无人机航拍
+\begin{frame}[t]
+	\frametitle{无人机航拍}
+	\begin{columns}[t,onlytextwidth]
+		%%左边列
+		\begin{column}{0.6\textwidth}
+		无人机一项重要应用是航拍。
+		航拍所采用的数据传输方案很大程度上影响用户的体验。
+		\vspace{1em}
+		\begin{block}{视频传输方案}
+			\footnotesize
+			\begin{enumerate}[(1)]
+				\item 专有数据链，如DJI的Lightbridge
+				\item 基于TCP/IP的网络视频传输
+			\end{enumerate}
+		\end{block}
+		%%右边列
+		\end{column}
+		\hspace{0.5em}
+		\begin{column}{0.4\textwidth}
+			\vspace{-3em}
+			\begin{figure}
+				\includegraphics[height=4.2cm]{figures/uavhangpai.eps}
+			\end{figure}
+		\end{column}	
+	\end{columns}
+	%%新的一行
+	\vspace{1.5em}
+	两种传输方案都有各自的优缺点。
+\end{frame}
+%%两种视频传输方案优缺点
+\frame {
+	\frametitle{两种视频传输方案优缺点}
+	
+	\begin{columns}[t]
+		%%左边列
+		
+		\begin{column}{0.4\textwidth}
+			\begin{block}{专有数据链}
+				\footnotesize
+				\begin{block}{优点}
+				传输时延小、单向广播
+				\end{block}
+				\begin{block}{缺点}
+				需要专门设备，
+				价格较高，
+				且与目前因特网体系架构不兼容
+				\end{block}
+			\end{block}
+		\end{column}
+		%%右边列
+		\begin{column}{0.55\textwidth}
+			\begin{block}{基于TCP/IP的方案}
+				\footnotesize
+				\begin{block}{优点}
+				与现有网络体系架构兼容，
+				符合未来万物互联的趋势，
+				设备价格低廉。
+				\end{block}
+				\begin{block}{缺点}
+				传输时延大，
+				容易受到无线链路中各种干扰，
+				\color{red}{受限于TCP协议的缺点}。
+				\end{block}
+			\end{block}
+		\end{column}
+	\end{columns}
+	\note{
+		本文也是着眼于TCP协议的缺点，
+		对TCP进行改进，
+		以提高基于TCP协议的无人机视频传输的性能
+	}
+}
 
-     	\begin{column}{0.40\textwidth}
-     		%\footnotesize
-     		% \vspace{+15em}
-     		如图\ref{fig:codingexp}所示，
-     		尽管$SEQ=2$和$SEQ=3$丢失，
-     		但是接收端在收到$SEQ=4$的编码包后，
-     		看到了报文$p_2$，
-     		所以回复给发送端的是$ACK=3$。
-     		对于处于接收端未解出的报文，
-     		如$p_3$和$p_4$,就交给后续的冗余包来补偿。
-     		
-     	\end{column}
-     \end{columns}
-%     \textbf{$k$-DOP}\footfullcite{klosowski1998efficient}的局限性：方向\textbf{固定}且为\textbf{有限的偶数}，不同模型其截面方向一致， \textbf{不够紧致}；\\ 
-%     而凸包很(最)紧致，但面片数量太多，构造复杂度$O(n\log n)$。
-%    \begin{block}{本文凸包围体的目标}
-%      \hspace{-2.0em}   \begin{minipage}{\textwidth}
-%    \begin{description}
-%      \item[紧致：] 能够自适应模型，根据模型形状特点有不同的方向；
-%      \item[快速：] 生成凸包围体的速度要快，利用~GPU~加速；
-%      \item[灵活：] 通过参数~$k$~调节凸包围体的简单性和紧致程度。
-%    \end{description}
-%  \end{minipage}
-%    \end{block}
+\subsection{TCP协议}
+%%TCP简单概述
+\frame {
+	\frametitle{TCP简单概述}
+	\begin{block}{TCP协议}
+		\footnotesize
+		TCP是一种可靠的面向连接的协议。
+		为了保证其可靠性，
+		设计了ACK确认机制，
+		流控机制，
+		拥塞控制算法。\\
+		\begin{description}
+			\item[ACK机制] 对于发送端发出的报文，
+			如果接收端确实收到，那么会回复一个ACK报文进行累积确认。
+			\item[流控机制] 为了让发送端的发送速度和接收端的接收速度匹配，
+			接收端通过ACK报文中的\emph{接收窗口}字段告知发送端自己的处理能力，
+			以让发送端调节好发送速度。
+			\item[拥塞控制算法] 如慢启动、拥塞避免、快速重传和快速回复等，
+			目的是当网络出现拥塞的时候，减慢发送速度，以避免网络进一步拥塞；
+			当网络通畅的时候，增大发送速率，以最大化利用网络带宽。
+		\end{description}
 
-       \note{
-       }
-  }
-
-  \subsection{TCP/NC存在问题}
-   \frame{
-   \frametitle{传输时延 }
-    \vspace{-1em}
-    \begin{myDef}[传输时延]\label{def:shiyan}
-    	如果源节点产生数据报文$pkt_i$的时间为$t_{s_i}$，
-    	目的节点将数据报文$pkt_i$交付给上层时间为$t_{r_i}$，
-    	定义数据包的传输时延为$delay_i=t_{r_i} - t_{s_i}$。
-    \end{myDef}
-   \begin{block}{解码导致的时延}
-   	TCP/NC的基本思想是利用发送端的编码将链路的丢包问题后延，
-   	当发送端的冗余包足够弥补链路丢包后，
-   	丢包就被掩盖。
-   	带来的问题是数据包的传输时延变大。
-   	以图\ref{fig:codingexp}为例，
-   	如果补偿$SEQ=2$的冗余包为$SEQ=7$，
-   	那么$p_2$需要等到$SEQ=7$才能被接收端的NC层交付给上层TCP。
-   	那么$p_2$的传输时延为$delay_2 = t_{r_7} - t_{s_2}$。
-   	   \end{block}
-
-%   \begin{block}{分类}
-%     \begin{description}
-%       \item[加速结构：] SPT（如四叉树、KD~树等）~v.s~\textbf{BVH}（OBB树、$k$-DOP树等）
-%       \item[表现形式：] \textbf{刚体}~v.s~可变形，凸体~v.s~凹体，CSG~v.s~参数曲面~v.s~\textbf{多边形网格}
-%       \item[碰撞环境：] \textbf{成对}~v.s~\textbf{多体}，\textbf{静止}~v.s~\textbf{运动}，\textbf{离散}~v.s~连续
-%     \end{description}
-%   \end{block}
-   
-   \note{
-    (介绍PPT后)，本文后面的实验就是基于BVH的，不可变形的三角网格。//现在研究较多的是连续的可变形的碰撞检测布料模拟头发模拟等。
-   }
-  }
-%
-%  \frame{
-%    \frametitle{基于~BVH~的碰撞检测算法}
-%    \begin{columns}[onlytextwidth]
-%      \begin{column}{0.35\textwidth}
-%        \vspace{-1.5em}
-%        \begin{figure}[htbp]
-%            \begin{center}
-%            \begin{boxedminipage}{1\textwidth}
-%            \subfloat{\label{lbl:bvh-bunny-center-0.png}}
-%              {\includegraphics[height=1.4cm]{bvh-bunny-center-0.png}}
-%            \subfloat{\label{lbl:bvh-bunny-center-1.png}}
-%              {\includegraphics[height=1.4cm]{bvh-bunny-center-1.png}}
-%            \\
-%            \subfloat{\label{lbl:bvh-bunny-center-2.png}}
-%              {\includegraphics[height=1.4cm]{bvh-bunny-center-2.png}}
-%            \subfloat{\label{lbl:bvh-bunny-center-3.png}}
-%              {\includegraphics[height=1.4cm]{bvh-bunny-center-3.png}}
-%            \\\hspace{0.5cm}
-%            \subfloat{\label{lbl:bvh-bunny-center-4.png}}
-%              {\includegraphics[height=1.5cm]{bvh-bunny-center-4.png}}
-%            \subfloat{\label{lbl:bvh-bunny-center-5.png}}
-%              {\includegraphics[height=1.5cm]{bvh-bunny-center-5.png}}
-%            \\
-%            \subfloat{\label{lbl:bvh-bunny-center-6.png}}
-%              {\includegraphics[height=1.5cm]{bvh-bunny-center-6.png}}
-%            \subfloat{\label{lbl:bvh-bunny-center-7.png}}
-%              {\includegraphics[height=1.5cm]{bvh-bunny-center-7.png}}
-%            \end{boxedminipage}
-%            \vspace{-0.5em}
-%          \caption{八层~BVH~示例}
-%          \label{lbl:bvh-example}
-%          \end{center}
-%          \end{figure}
-%      \end{column}
-%      \hspace{0.5em}
-%      \begin{column}{1.2\textwidth}
-%      \vspace{0.2em}
-%         \scalebox{0.5}{
-%              \begin{minipage}{1.0\textwidth}
-%      \vspace{-2em}
-%           \begin{algorithm}[H]
-%              \caption{自顶向下层次遍历~BVH~}
-%              \label{alg:traverse-bvh-tree}
-%              \begin{algorithmic}[1]
-%              \Require
-%              两个~BVH~树的根节点~$node_1$，$node_2$
-%              \Ensure
-%              模型是否相交
-%              \Function {TraverseBVHTree}{$node_1, node_2$}
-%                \If{$node_1.bv \cap node_2.bv = \emptyset$}
-%                  \State \Return{\textbf{False}}
-%                  \Comment{包围体重合测试, 包围体不相交直接返回}
-%                \Else
-%                    \If {$node_1.children = \emptyset$}
-%                         \If {$node_2.children = \emptyset$}
-%                         \State \Comment{最底层叶子节点原生几何相交测试}
-%                         \State \Return {\Call{CheckIntersection}{$node_1.primitives, node_2.primitives$}}
-%                         \Else
-%                            \ForAll {$child \in node_2.children$}
-%                            \State \Call{TraverseBVHTree}{$node_1, child$} \Comment{递归调用}
-%                            \EndFor
-%                         \EndIf
-%                    \Else
-%                         \ForAll {$child \in node_1.children$}
-%                         \State \Call{TraverseBVHTree}{$child, node_2$}  \Comment{递归调用}
-%                         \EndFor
-%                    \EndIf
-%                \EndIf
-%              \EndFunction
-%              \end{algorithmic}
-%              \end{algorithm}
-%              \end{minipage}
-%            }
-%      \\
-%      \scriptsize \hspace{1em}代价函数： $T_{cost} = n_v * C_v + n_p * C_p + (n_u * C_u)$(运动)
-%      \end{column}
-%    \end{columns}
-%    \note{
-%      基于包围体树的碰撞检测算法， 一般首先都会初始化环境然后构建层次结构的包围体树，碰撞检测时从顶层开始逐渐往下层遍历，到最底层叶子节点后开始三角网格模型相交测试，
-%      当发现三角网格相交后立即终止遍历，确定模型发生碰撞。
-%      评价碰撞检测算法的指标一般用上面这个公式来衡量，其中nv和 np分别表示参与包围体节点相交测试的数量和参与原始几何相交测试的数量，Cv和 Cp则表示相应的平均测试耗费的代价。
-%      当在运动场景时还需要加上nu和 Cn就是模型旋转或者运动后包围体更新的数量和更新的代价。
-%      本文算法就是尽早发现包围体不相交的情况，减少np和cp的数量。
-%    }
-%}
+	\end{block}
+}
+%%使用TCP进行无人机视频传输存在的问题
+%\begin{frame}[t]
+\frame{
+	\frametitle{使用TCP进行无人机视频传输存在的问题}
+	TCP协议最初是针对有线网络设计的，
+	考虑到有线网络中极低的误码率，
+	其拥塞控制模型以丢包为基础。
+	但无人机视频传输有其自身特点
+	\begin{block}{无人机视频传输环境特点}
+		\footnotesize
+		大尺度衰落信道环境、
+		多径干扰导致的高误码率；
+		障碍物遮挡、基站切换导致的连接短暂中断；
+		视频传输对传输时延很敏感。
+	\end{block}
+	标准TCP在面对这些特点时，表现出了天生的劣势。
+	\begin{block}{劣势}
+		\footnotesize
+		\begin{enumerate}[(1)]
+			\item 无法区分拥塞丢包和非拥塞丢包，
+			频繁启动拥塞控制算法，
+			降低发送速率。
+			\item TCP的重传确保了可靠，但一定程度上增大了传输时延，而视频传输对时延很敏感。
+		\end{enumerate}
+	\end{block}
+	\note{
+		考虑到需要进行可靠传输，
+		TCP的ACK机制是必要的，
+		我们只能在减少重传次数上做文章。
+		针对TCP无法区分拥塞丢包和非拥塞丢包问题上，
+		以前的一些学者进行了相关改进。
+		对于拥塞，如果将来将无人机接入到因特网中去，
+		将是一个需要考虑的问题。
+	}
+}
+%\end{frame}
+%%如何克服这些缺点？
+\begin{frame}[t,allowframebreaks]{如何克服这些缺点？}
+	在处理拥塞丢包和非拥塞丢包问题上，
+	有两种思想：掩盖非拥塞丢包和区分两种丢包。
+	\vspace{1em}
+	\begin{block}{掩盖非拥塞丢包}
+		\begin{description}
+			\footnotesize
+			\item[ARQ] 应用于无线网络的链路层，
+			但会和TCP的原有机制冲突，
+			导致乱序。
+			\item[FEC] 将前向纠错码和TCP结合，
+			如使用异或运算对前\emph{n}个报文编码。
+			\item[Indirect-TCP] 在有损信道入口处终止原始TCP连接，
+			由TCP-agent接管报文。
+			\item[TCP-snoop] 保持端到端语义，保存经过的数据的拷贝，处理重复ACK。
+		\end{description}
+	\end{block}
+	\begin{block}{区分丢包}
+		\footnotesize
+		\begin{description}
+			\item[ELN] 接收端的MAC层可以检测出错，
+			将这一信息告知上层TCP，上层TCP会发送给对方一个报文告知出错。
+			\item[TCP-vegas] 让拥塞检测和丢包解耦。但其同样无法处理丢包引起的重传导致的时延过大问题。
+			\item[ECN] 显示拥塞控制标志位。利用IP首部的TOS字段。
+		\end{description}
+	\end{block}
+	Sundararajan等人提出TCP/NC\footfullcite{Sundararajan2009}，
+	在OSI协议栈的TCP层和NC层添加一个网络编码层。
+	在网络编码层对数据包进行冗余编码，
+	掩盖链路中出现的丢包。
+	\note{
+		TCP花费很长一段时间从丢包中恢复，
+		在介绍TCP/NC之前，
+		先简要介绍一下网络编码的相关原理。}
+\end{frame}
