--- a/THUBeamer-master/ppt04.tex
+++ b/THUBeamer-master/ppt04.tex
@@ -33,29 +33,30 @@
 %      }
 %    }
 
-%    \section{主要参考文献}
-%    \frame[t,allowframebreaks]{
-%      \frametitle{\secname}
-%    \printbibliography
-%    }
+
+\section{主要参考文献}
+\frame[t,allowframebreaks]{
+	\frametitle{\secname}
+	\printbibliography
+}
     
-    \section{Q\&A}
-%    \frame{
-%      \frametitle{\secname}
-%      \begin{block}{致谢}
-%        \begin{enumerate}[(1)]
-%          \item 导师雍俊海老师的精心指导；
-%          \item 施侃乐老师帮助；
-%          \item 研究所各个项目的历练；
-%          \item 王斌老师、陈莉老师的评审及意见，答辩委员会老师聆听和指导。
-%        \end{enumerate}
-%      \end{block}
-%    }
+\section{Q\&A}
+    \frame{
+      \frametitle{\secname}
+      \begin{block}{致谢}
+        \begin{enumerate}[(1)]
+          \item 导师陈庆春老师的精心指导；
+          \item 教研室各位同学三年来对我的帮助；
+          \item 教研室各个项目的历练；
+          \item XX老师、XX老师的评审及意见，答辩委员会老师聆听和指导。
+        \end{enumerate}
+      \end{block}
+    }
     \frame{
       \frametitle{Q \& A}
       \begin{block}{Questions?}
        ~\\ ~\\
-       \center{\Large{Thank you!}}
+       \center{\Large{\emph{Thank you!}}}
        \\ ~\\ ~\\ ~\\ ~\\ 
       \end{block}
     }
