--- a/content/chap03.tex
+++ b/content/chap03.tex
@@ -237,7 +237,7 @@ fc&1f&21&63&a5&f4& 7& 9&1b&2d&77&99&b0&cb&46&ca\\
 	\end{lstlisting}
 
 \par
-我们以两\ref{GCAL}个数据包$p_{1}$和$p_{2}$的运算为例，
+我们以两个数据包$p_{1}$和$p_{2}$的运算为例，
 说明如何对数据包进行编码。
 假定数据包$p_{1}$和$p_{2}$都为一个2字节的报文，
 以比特流的形式表示，
