--- a/THUBeamer-master/ppt03.tex
+++ b/THUBeamer-master/ppt03.tex
@@ -55,8 +55,154 @@
 \end{frame}
 %%编码示例
 \begin{frame}
+	\frametitle{编码示例}
+	我们以两个数据包$p_{1}$和$p_{2}$的运算为例，
+	说明如何对数据包进行编码。
+	假定数据包$p_{1}$和$p_{2}$都为一个2字节的报文，
+	以比特流的形式表示，
+	$p_{1}=\{1010\ 0101\ 0110\ 1111\}$，$p_{2}=\{1111\ 0000\ 1101\ 0110\}$，
+	我们需要计算$p_{encoded}=7p_{1} \oplus 13p_{2}$的值。
+	步骤如下：
+	\begin{enumerate}[(1)]
+		\item 取$p_{1}$和$p_{2}$的第一个字节，
+		分别是$\{1010\ 0101\}$和$\{1111\ 0000\}$，
+		对应的十进制为$D_{p_1}=165$和$D_{p_2}=240$。
+		在有限域$GF(2^8)$下计算$7\times 165$和$13 \times 240$的值，
+		分别是$0xc6$和$0xc4$。
+		则$p_{encoded}$的第一个字节为$0xc4 \oplus 0xc6=0x02$，
+		二进制表示为$\{0000\ 0010\}$。
+		\item 同样的方法处理$p_{1}$和$p_{2}$的第二个字节，
+		结果为$\{1010\ 0111\}$。
+		\item 拼接两个结果得到$p_{encoded}=\{0000\ 0010\ 1010\ 0111\}$。
+	\end{enumerate}
+\end{frame}
+\subsection{技术路线}
+%%设备选型
+\begin{frame}
+	\frametitle{设备选型}
+	\begin{columns}
+		\begin{column}{0.4\textwidth}
+			考虑到无人机视频传输的应用场景，
+			及TCP/NC需要参与到网络协议栈的流程中去，
+			选用Raspberry Pi这款基于Linux的嵌入式设备，
+			部署TCP/NC协议,如图\ref{fig:rasp}所示。
+
+		\end{column}
+		\begin{column}{0.5\textwidth}
+			\begin{figure}
+				\includegraphics[height=4cm]{figures/rasp.eps}
+				\caption{Raspberry Pi板子}
+				\label{fig:rasp}
+			\end{figure}
+		\end{column}
+	\end{columns}
+	\note{
+		Raspberry Pi是一款ARM架构的单板机，
+		板载了以太网卡。支持CSI接口，
+		方便外接摄像头，进行后期无人机视频传输测试。
+		操作系统选择树莓派基金会的Debian系统，
+		内核版本为3.18。
+	}
+\end{frame}
+%%Netfilter
+\begin{frame}
+	\frametitle{Netfilter}
+	\begin{columns}
+		\begin{column}{0.5\textwidth}
+			NC层实施方案有两种：
+			\begin{enumerate}
+				\item 直接在内核的TCP协议源码上更改，添加NC层的各个模块，然后再编译内核源码
+				\item 利用Linux内核提供给用户用于处理网络封包的框架——Netfilter。
+			\end{enumerate}
+			本文将TCP/NC部署在Netfilter的NF\_IP\_LOCAL\_IN和NF\_IP\_LOCAL\_OUT处。
+		\end{column}
+		\begin{column}{0.4\textwidth}
+			\vspace{-1.5em}
+			\begin{figure}
+				\includegraphics[height=5cm]{../figures/packetflow.eps}
+				\caption{Netfilter及其在内核源码中调用关系}
+				\label{fig:packetflow}
+			\end{figure}
+		\end{column}
+	\end{columns}
+
+	\note{
+	}
+\end{frame}
+%%关键数据结构
+\begin{frame}
+	\frametitle{关键数据结构}
+	NC层在NF\_IP\_LOCAL\_IN和NF\_IP\_LOCAL\_OUT这两个钩子点获得的都是单独的报文，
+	其形式为\emph{sk\_buff}结构体，如图\ref{fig:skbuff}所示。
+		\begin{columns}
+		\begin{column}{0.5\textwidth}
+			数据包在Linux的网络协议栈的不同层之间传递，
+			其体现形式就是不同层的函数对一个数据包对应的\emph{sk\_buff}进行各种操作。
+			\\
+			TCP/NC通过\emph{sk\_buff}获得数据包的字节流，
+			然后对数据包进行编码。
+		\end{column}
+		\begin{column}{0.4\textwidth}
+			\vspace{-1.5em}
+			\begin{figure}
+				\includegraphics[height=4cm]{../figures/skbuff.eps}
+				\caption{skbuff结构}
+				\label{fig:skbuff}
+			\end{figure}
+		\end{column}
+	\end{columns}
 	
 \end{frame}
+\subsection{NC层关键技术}
+%%NC层头部
+\begin{frame}
+	\frametitle{NC层头部}
+	\begin{columns}
+		\begin{column}{0.4\textwidth}
+			发送端需要给编码得到的编码包添加NC头部，
+			包括编码系数等信息，接收端利用这些信息进行解码。
+			图\ref{fig:codingMechanism}为NC报文的头部。
+		\end{column}
+		\begin{column}{0.6\textwidth}
+			\begin{figure}
+				\includegraphics[height=4cm]{../figures/codingheader.eps}
+				\label{fig:codingheader}
+				\caption{NC层头部}
+			\end{figure}
+		\end{column}
+	\end{columns}
+\end{frame}
+%%编码端
+\begin{frame}
+	\frametitle{编码步骤}
+	\renewcommand{\algorithmcfname}{算法}
+	\begin{algorithm}
+		\caption{对数据包进行编码} 
+		\label{algo:bianma}
+		\SetKwInOut{Input}{\textbf{输入}}\SetKwInOut{Output}{\textbf{输出}}
+		\Input{\\
+			冗余度因子 $R$;\\
+			编码缓存双向链表 $sk\_buff\_head$;\\
+			冗余度残留系数 $NUM$;\\
+			编码窗口 $TCPNC\_CODE\_WND$;
+		}
+		\Output{\\
+			编码报文链表 $sk\_buff\_ret$
+		}
+		$NUM \leftarrow NUM+R$;\\
+		\While{$NUM \ge 1$}  
+		{  
+			从$sk\_buff\_head$表头开始往后遍历$TCPNC\_CODE\_WND$个报文;\\
+			在$GF\left(2^8\right)$上生成$TCPNC\_CODE\_WND$个系数;\\
+			根据系数和原始数据包计算出编码包;\\
+			给编码报文添加NC头部;\\
+			将编码包加入到$sk\_buff\_ret$链表;\\
+			$NUM \leftarrow NUM-1$;
+		}
+		\Return \ $sk\_buff\_ret$;
+	\end{algorithm}
+\end{frame}
+
 %\subsection{解码矩阵}
 \frame{
 	\frametitle{解码矩阵}
@@ -99,7 +245,6 @@
 \frame{
 	\frametitle{NC头部结构}
 	\vspace{-2em}
-
 	\begin{figure}
 	\hspace{-1.5em}
 		%\centering
@@ -122,7 +267,7 @@
 		记录编号为\emph{Pid}的编码包由哪几个原始数据包组成，
 		以图\ref{fig:codingexp}为例，
 		\emph{Pid=1}的编码包由$p_1$、$p_2$、$p_3$和$p_4$组成。
-		\par
+		\\
 	\end{block}
 	\begin{block}{接收端}
 		接收端在发出去的每个ACK报文中都会填写NC头部的\emph{Pid-reply}字段，
