--- a/THUBeamer-master/ppt01.tex
+++ b/THUBeamer-master/ppt01.tex
@@ -73,7 +73,7 @@
 				\begin{block}{缺点}
 				传输时延大，
 				容易受到无线链路中各种干扰，
-				\color{red}{受限于TCP协议的缺点}。
+				{\color{red}{受限于TCP协议的缺点}}。
 				\end{block}
 			\end{block}
 		\end{column}
@@ -98,9 +98,9 @@
 		拥塞控制算法。\\
 		\begin{description}
 			\item[ACK机制] 对于发送端发出的报文，
-			如果接收端确实收到，那么会回复一个ACK报文进行累积确认。
+			如果接收端收到，那么会回复一个ACK报文进行累积确认。
 			\item[流控机制] 为了让发送端的发送速度和接收端的接收速度匹配，
-			接收端通过ACK报文中的\emph{接收窗口}字段告知发送端自己的处理能力，
+			接收端通过ACK报文中的接收窗口字段告知发送端自己的处理能力，
 			以让发送端调节好发送速度。
 			\item[拥塞控制算法] 如慢启动、拥塞避免、快速重传和快速回复等，
 			目的是当网络出现拥塞的时候，减慢发送速度，以避免网络进一步拥塞；
@@ -173,7 +173,7 @@
 		\end{description}
 	\end{block}
 	Sundararajan等人提出TCP/NC\footfullcite{Sundararajan2009}，
-	在OSI协议栈的TCP层和NC层添加一个网络编码层。
+	在OSI协议栈的TCP层和IP层添加一个网络编码层。
 	在网络编码层对数据包进行冗余编码，
 	掩盖链路中出现的丢包。
 	\note{
